Implement dynamic item view

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
   <script type="text/template" id="category-template">
     <h1>Appetizers</h1>
     <ul>
-      <li>Placeholder</li>
     </ul>
   </script>
 
   <script type="text/template" id="item-template">
-    <h2>Cool Food</h2>
-    <h3>$1</h3>
+    <h2><%= name %></h2>
+    <h3><%= price %></h3>
     <button>Add to Order</button>
   </script>
 
