Implement dynamic order view

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
   <script type="text/template" id="order-template">
     <h1>Order</h1>
     <ul>
-      <li>Placeholder</li>
     </ul>
-    <p>Total Price: $1</p>
+    <p>Total Price: $<%= totalPrice %></p>
   </script>
 
   <script type="text/template" id="order-item-template">
