Implement add to order

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script type="text/template" id="item-template">
     <h2><%= name %></h2>
     <h3><%= price %></h3>
-    <button>Add to Order</button>
+    <button class="js-add">Add to Order</button>
   </script>
 
   <script type="text/template" id="order-template">
