--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <nav class="js-primary-nav">
     <h1>Majestic Thai</h1>
     <ul>
-      <li>Appetizers</li>
     </ul>
   </nav>
 
@@ -19,7 +18,7 @@
   </div>
 
   <script type="text/template" id="category-template">
-    <h1>Appetizers</h1>
+    <h1><%= category %></h1>
     <ul>
     </ul>
   </script>
@@ -38,9 +37,13 @@
   </script>
 
   <script type="text/template" id="order-item-template">
-    <h2>Cool Food</h2>
-    <h3>$1</h3>
+    <h2><%= name %></h2>
+    <h3><%= price %></h3>
     <button>X</button>
+  </script>
+
+  <script type="text/template" id="nav-item-template">
+    <a href="#category/<%= slug %>"><%= name %></a>
   </script>
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
