Implement mostly working item remove

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script type="text/template" id="order-item-template">
     <h2><%= name %></h2>
     <h3><%= price %></h3>
-    <button>X</button>
+    <button class="js-remove">X</button>
   </script>
 
   <script type="text/template" id="nav-item-template">
